--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,21 @@
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
   </head>
+  <%= render 'menu'%>
+
+  <% if !flash.empty?%>
+    <div id="error_explanation">
+      <div class="alert alert-danger">
+        <% flash.each do |name, msg| -%>
+          <%= content_tag :div, msg, class: name %>
+        <% end -%>
+      </div>
+    </div>
+  <%end%>
 
   <body>
     <%= yield %>
   </body>
+  <%= javascript_include_tag 'application' %>
 </html>
