--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -20,16 +20,16 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                   aria-haspopup="true" aria-expanded="false">Gerenciar Campos</a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Listar Campos</a></li>
-                  <li><a href="#">Adicionar Campo</a></li>
+                  <li><a href="/contact_structures">Listar Campos</a></li>
+                  <li><a href="/contact_structures/new">Adicionar Campo</a></li>
                 </ul>
               </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                   aria-haspopup="true" aria-expanded="false">Gerenciar Contatos</a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">Listar Contatos</a></li>
-                  <li><a href="#">Adicionar Contato</a></li>
+                  <li><a href="/contacts">Listar Contatos</a></li>
+                  <li><a href="/contacts/new">Adicionar Contato</a></li>
                 </ul>
               </li>
             <%end%>
