--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -11,15 +11,37 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :email %>
     <%= f.text_field :email %>
   </div>
+
+  <%
+      @contact_structures = ContactStructure.where(user_id: current_user.id)
+  %>
+  <%= f.fields_for(:extra) do |ff|%>
+    <%@contact_structures.each do |cs|%>
+      <div class="form-group">
+        <%= ff.label cs.name %>
+        <% if cs.data_type.name == 'text' %>
+            <%= ff.text_field cs.name, value: contact.extra[cs.name]%>
+        <%end%>
+        <% if cs.data_type.name == 'text_area' %>
+          <%= ff.text_area cs.name, value: contact.extra[cs.name]%>
+        <%end%>
+        <% if cs.data_type.name == 'combo_box' %>
+          <%= ff.select(cs.name, options_for_select(cs.extra.zip(cs.extra), contact.extra[cs.name])) %>
+        <%end%>
+      <%=# render "form_types/form_#{cs.type.name}", ff:ff, field: cs
+    %>
+      </div>
+    <%end%>
+  <%end%>
 
   <div class="actions">
     <%= f.submit %>
