--- a/app/views/contact_structures/_form.html.erb
+++ b/app/views/contact_structures/_form.html.erb
@@ -1,3 +1,4 @@
+<% contact_structure.extra=contact_structure.extra.try(:join,',') %>
 <%= form_for(contact_structure) do |f| %>
   <% if contact_structure.errors.any? %>
     <div id="error_explanation">
@@ -12,13 +13,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :user_id %>
-    <%= f.text_field :user_id %>
-  </div>
-
-  <div class="field">
-    <%= f.label :data_type_id %>
-    <%= f.text_field :data_type_id %>
+    <%= f.label :data_type %>
+    <%= f.collection_select(:data_type_id, types, :id, :name) %>
   </div>
 
   <div class="field">
