--- a/app/views/contact_structures/edit.html.erb
+++ b/app/views/contact_structures/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Contact Structure</h1>
 
-<%= render 'form', contact_structure: @contact_structure %>
+<%= render 'form', contact_structure: @contact_structure, types: @types %>
 
 <%= link_to 'Show', @contact_structure %> |
 <%= link_to 'Back', contact_structures_path %>
