--- a/app/views/contact_structures/new.html.erb
+++ b/app/views/contact_structures/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Contact Structure</h1>
 
-<%= render 'form', contact_structure: @contact_structure %>
+<%= render 'form', contact_structure: @contact_structure, types: @types %>
 
 <%= link_to 'Back', contact_structures_path %>
