--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -2,12 +2,14 @@
 
 <h1>Contacts</h1>
 
-<table>
+<table class='table'>
   <thead>
     <tr>
       <th>Name</th>
       <th>Email</th>
-      <th>User</th>
+      <%ContactStructure.all.each do |cs|%>
+        <th><%=cs.name.capitalize%></th>
+      <%end%>
       <th>Extra</th>
       <th colspan="3"></th>
     </tr>
@@ -18,8 +20,9 @@
       <tr>
         <td><%= contact.name %></td>
         <td><%= contact.email %></td>
-        <td><%= contact.user %></td>
-        <td><%= contact.extra %></td>
+        <%ContactStructure.all.each do |cs|%>
+          <td><%= contact.extra[cs.name] %></td>
+        <%end%>
         <td><%= link_to 'Show', contact %></td>
         <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
         <td><%= link_to 'Destroy', contact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
